--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-dash==2.3.1
+dash==2.6.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.2.2
+numpy==1.23.4
+pandas==1.5.0
+plotly==5.10.0
+python-dateutil==2.8.2
